--- a/monty-hall-ui/package.json
+++ b/monty-hall-ui/package.json
@@ -2,7 +2,7 @@
   "name": "monty-hall-ui",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://0.0.0.0:5000",
+  "proxy": "http://backend:80/",
   "dependencies": {
     "@devexpress/dx-react-chart": "^4.0.3",
     "@devexpress/dx-react-chart-material-ui": "^4.0.3",
