working with db

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3
+FROM python
 
 WORKDIR /app
 
@@ -7,6 +7,10 @@ COPY . .
 RUN pip3 install -r requirements.txt
 
 EXPOSE 80
+
+ENV MONGODB_USERNAME=thecsr
+ENV MONGODB_PASSWORD=Woodland143
+ENV MONGODB_URL=mongodb
 
 CMD [ "python3", "app.py" ]
 
